# WrplReplayParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ClogDecryptor/ClogDecryptor/: CMakeLists.txt  ClogDecryptor.cpp
cmake/: CompilerWarnings.cmake  functions.cmake
config_dir/: dagor_replay_test.blk
debugging/DumpMission/: main.cpp
debugging/TestNewBlk/: CMakeLists.txt
experiment/create_entitiy/: CMakeLists.txt
experiment/dagor_replay_test/: CMakeLists.txt  Replay.cpp  TestLoadingReplay.cpp
experiment/python/: main.cpp
experiment/test_net_unpack/: CMakeLists.txt  testNet.cpp
python/BitStream/: BitStream.cpp
python/DataBlock/: DataBlock.cpp
python/ecs/: CMakeLists.txt  ECSQueryES.cpp  ECSTypes.cpp  EntityManager.cpp
python/include/modules/ecs/: ECSQueryES.h
python/math/: Math.cpp
python/mpi/: codegen_objects.cpp
python/replay/: replay.cpp
python/state/: State.cpp
replay/: CMakeLists.txt
replay/Replay/: CMakeLists.txt  ReplayReader.cpp
replay/codegen/: CMakeLists.txt  DataTypes.py  README  builtin_types.py  cpp_types.py  custom_rw.py  generate.py  hashCheck.py  parser.py  write_header.py
replay/codegen/objects/: MPlayer.py  ReflectableObjects.py  TeamData.py  obj_base.py
replay/ecs/: Archetypes.cpp  BitStreamDeserializer.cpp  CMakeLists.txt  Component.cpp  ComponentTypes.cpp  ComponentTypesDefs.cpp  DataComponents.cpp  EntityManager.cpp  EntityManagerQuery.cpp  EventsDB.cpp  LoadTemplatesBLK.cpp  Templates.cpp  Unit.cpp  baseio.cpp
replay/idFieldSerializer/: CMakeLists.txt  idFieldSerializer.cpp
replay/include/: Unit.h  basic_replay_structs.h  consts.h  idFieldSerializer.h
replay/include/Replay/: Replay.h  find_rpl_files.h
replay/include/ecs/: BasicTypeDefs.h  BitStreamDeserializer.h  ComponentPrinting.h  ComponentPrintingImplementations.h  ComponentRef.h  ComponentTypeManager.h  ComponentTypes.h  ComponentTypesDefs.h  DataComponents.h  EntityManager.h  Templates.h  archetypes.h  component.h  ecsHash.h  entityId.h
replay/include/ecs/ComponentTypes/: arrayType.h  listType.h  objectType.h
replay/include/ecs/internal/: ecsQueryInternal.h
replay/include/ecs/query/: coreEvents.h  ecsQuery.h  entitySystem.h  event.h  eventsDB.h  queryView.h
replay/include/gameMath/: quantization.h
replay/include/mpi/: GeneralObject.h  MPlayer.h  ObjectDispatcher.h  Replication.h  mpi.h  reflection.h  serializers.h  types.h
replay/include/mpi/codegen/: ReflIncludes.h  serializers.h  types.h
replay/include/mpi/codegen/ReflectableObjects/: BombingZone.h  CaptureZone.h  ExitZone.h  GeneralState.h  GlobalElo.h  MPlayer.h  PickupZone.h  RearmZone.h  TeamData.h
replay/include/mpi/sync/: FMSync.h  GMSync.h
replay/include/network/: CNetwork.h  Connection.h  MessageClassInstance.h
replay/include/state/: ParserState.h
replay/init/: init.cpp
replay/mpi/: BattleMessages.cpp  CMakeLists.txt  ObjectDispatcher.cpp  Replication.cpp  mpi.cpp  reflection.cpp  serializers.cpp
replay/mpi/codegen/: serializers.cpp
replay/network/: CMakeLists.txt  CNetwork.cpp  Connection.cpp  eid.cpp
replay_inspector/: CMakeLists.txt
replay_inspector/view_templates/: viewer.cpp
src/: CMakeLists.txt
src/BitStream/: BitStream.cpp  CMakeLists.txt
src/DataBlock/: BLK_serialize.cpp  BLK_text.cpp  CMakeLists.txt  DataBlock.cpp  DataBlockShared.cpp
src/FileSystem/: CMakeLists.txt  File.cpp  FileManager.cpp
src/Logger/: CMakeLists.txt  logger.cpp
src/VROMFs/: CMakeLists.txt
src/include/: BitStream.h  DataBlock.h  FileSystem.h  Logger.h  VROMFs.h  dag_assert.h  hash.h  onDemandInit.h  reader.h  utils.h
src/include/dblk/: DataBlock.h  DataBlockOwned.h  DataBlockShared.h  Param.h  dag_hashedKeyMap.h  vartypes.h
src/math/: CMakeLists.txt
src/reader/: CMakeLists.txt  Readers.cpp  ZlibRead.cpp
